# face

./: README.md
app/: CMakeLists.txt  build.gradle  dms.jks
app/models/: action_classifier.caffemodel  action_classifier.prototxt  action_classifier.tflite  calling_classifier.tflite  hao_face_detector.tflite  smoking_classifier.tflite
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: action_classifier.cpp  action_classifier.h  caffe_action_classifier.cpp  caffe_action_classifier.h  caffe_calling_classifier.cpp  caffe_calling_classifier.h  caffe_smoking_classifier.cpp  caffe_smoking_classifier.h  dmsworker.cpp  dmsworker.h  dmsworker_jni.cpp  dmsworker_jni.h  face_detector.cpp  face_detector.h  face_jni.cpp  face_jni.h  face_landmark.cpp  face_landmark.h  hao_face_detector.cpp  hao_face_detector.h  hog_face_detector.cpp  hog_face_detector.h  image_processor.cpp  image_processor.h  image_processor_jni.cpp  image_processor_jni.h  imageprocessor.cpp  imageprocessor.h  imageprocessor_jni.cpp  kazemi_face_landmark.cpp  kazemi_face_landmark.h  lbf_face_landmark.cpp  lbf_face_landmark.h  native_buffer_jni.cpp  native_buffer_jni.h  nativebuffer_jni.cpp  resnet_face_descriptor.cpp  resnet_face_descriptor.h  simple_pose_estimator.cpp  simple_pose_estimator.h  (+16 more)
app/src/main/java/com/hangsheng/face/: DeprecatedCapture.java  FaceDetector.java  MainActivity.java  NativeBuffer.java  VideoCapture.java
app/src/main/java/com/hsae/dms/: CameraUtils.java  DMSWorker.java  DeprecatedCapture.java  FaceDetector.java  ImageProcessor.java  MainActivity.java  NativeBuffer.java  VideoCapture.java
app/src/main/res/layout/: activity_main.xml
